[project]
name = "py-stream-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thecatblake", email = "k222ryousuke@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
py-stream-scraper = "py_stream_scraper:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
