[project]
name = "py-stream-scraper"
version = "0.1.14"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "thecatblake", email = "k222ryousuke@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "click>=8.3.0",
    "fakeredis>=2.32.0",
    "pytest>=8.4.2",
    "redis>=7.0.1",
    "rich>=14.2.0",
    "rocksdb-py>=0.0.6",
    "tqdm>=4.67.1",
    "ultimate-sitemap-parser>=1.6.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[project.scripts]
sx = "py_stream_scraper.cli:main"